# multisig-contract

./: Cargo.toml  Makefile  README.md
contract/: Cargo.toml
contract/src/: lib.rs
tests/: Cargo.toml  state.toml
tests/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
