[package]
name = "multisig-contract"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
multisig-contract-types = { workspace = true }

execution-core = { workspace = true }
rusk-abi = { workspace = true, features = ["abi", "dlmalloc"] }

[lib]
crate-type = ["cdylib"]
