[package]
name = "multisig-contract-tests"
authors.workspace = true
version.workspace = true
edition.workspace = true

publish = false

[dependencies]
multisig-contract-types = { workspace = true }

execution-core = { workspace = true }
rusk-abi = { workspace = true, features = ["host"] }
rusk-recovery = { workspace = true, features = ["state"] }
tempfile = { workspace = true }
toml = { workspace = true }

bytecheck = { workspace = true }
rkyv = { workspace = true }

rand = { workspace = true }
bs58 = { workspace = true }
dusk-bytes = { workspace = true }
